Todo : If lagaune deeplink or intent bhanera